# stock

./: .gitignore
apps/api/: .env.example  pyproject.toml
apps/api/app/api/: deps.py  main.py
apps/api/app/api/routes/: broker.py  control.py  health.py  news.py  portfolio.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: base.py  models.py
apps/api/app/schemas/: broker.py  news.py
apps/api/app/services/broker/: alpaca.py
apps/api/app/services/news/: dedup.py  ingest.py
apps/api/app/services/news/clients/: base.py  marketaux.py  mock.py
apps/api/app/workers/: worker.py
apps/api/ven/: pyvenv.cfg
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/assets/: route.ts
apps/web/src/app/api/broker/account/: route.ts
apps/web/src/app/api/broker/orders/: route.ts
apps/web/src/app/api/broker/positions/: route.ts
apps/web/src/app/api/news/: route.ts
apps/web/src/app/api/portfolio/history/: route.ts
apps/web/src/components/: AccountCard.tsx  NewsList.tsx  OrdersTable.tsx  PortfolioHistoryChart.tsx  PositionsTable.tsx
